admin/css/clickwhale-admin.css
/* ... */
.clickwhale-migration-section .spinner {
	float: none;
}

.clickwhale-migration-section .results {
	display: none;
	background: #ffffff;
	padding: 20px;
	margin: 20px 0 0;
	border-radius: 4px;
}

.clickwhale-migration-section .results.is-active {
	display: block;
}

.clickwhale-migration-section .results h3 {
	margin: 0 0 10px;
}

.clickwhale-migration-section .results p {
	margin: 0 0 10px;
}

.clickwhale-migration-section .results p:last-of-type {
	margin-bottom: 0;
}

#clickwhale-tools-migration-reset .spinner {
	float: none;
}

#clickwhale-tools-migration-reset .results {
	display: inline-block;
	vertical-align: middle;
	font-style: italic;
	margin: 4px 10px 0;
}


.clickwhale-banner {
	position: absolute;
	display: flex;
	align-items: center;
	justify-content: space-between;
	top: 0;
	left: 0;
	right: 0;
	background: #FDD231;
	padding: 1.5em 2em;
	margin-left: -20px;
}

.clickwhale-banner,
.clickwhale-banner * {
	box-sizing: border-box;
}

.clickwhale-banner--logo img {
	display: block;
	width: 120px;
	height: auto;
	margin-top: -17px;
}

.clickwhale-banner--links {
	display: flex;
	align-items: center;
	justify-content: flex-end;
	gap: 20px;
}

.clickwhale-banner--links a {
	font-size: 14px;
	line-height: 1em;
	font-weight: 700;
	color: #242424;
	transition: all .3s ease-in-out;
	text-decoration: underline;
}

.clickwhale-banner--links a:hover {
	text-decoration: none;
}

.clickwhale-banner--links a.clickwhale-banner--button {
	padding: 10px 20px;
	color: #ffffff;
	background-color: #007AFF;
	border: 2px solid #007AFF;
	border-radius: 4px;
	text-decoration: none;
	text-align: center;
	box-sizing: border-box;
}

.clickwhale-banner--links a:hover {
	color: #007AFF;
}

.clickwhale-banner--links a.clickwhale-banner--button.outlined {
	color: #007AFF;
	background: transparent;
}

.clickwhale-banner--links a.clickwhale-banner--button.dark {
	color: #1a1c1d;
	border-color: #1a1c1d;
}

.clickwhale-banner--links a.clickwhale-banner--button:hover,
.clickwhale-banner--links a.clickwhale-banner--button:focus {
	color: #ffffff;
	background: #1a1c1d;
	border-color: #1a1c1d;
	outline: none;
	box-shadow: none;
}

.clickwhale-banner--links a.clickwhale-banner--button.outlined:hover,
.clickwhale-banner--links a.clickwhale-banner--button.outlined:focus {
	color: #ffffff;
	background: #007AFF;
	border-color: #007AFF;
}

.clickwhale-banner--links a.clickwhale-banner--button.dark:hover,
.clickwhale-banner--links a.clickwhale-banner--button.dark:focus {
	color: #ffffff;
	background: #1a1c1d;
	border-color: #1a1c1d;
}

.clickwhale-banner--link-review--raiting {
	display: inline-flex;
	justify-content: flex-end;
	align-items: center;
}

.clickwhale-banner--link-review span.dashicons {
	position: relative;
	font-size: 16px;
	line-height: 1em;
	top: 2px;
}

.logo-field {
	position: relative;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	gap: 5px;
}

.logo-field a {
	display: inline-block;
}

.logo-field img {
	padding: 5px;
	border: 1px solid #dcdcde;
	border-radius: 5px;
	display: block;
	width: 150px;
	height: auto;
}

.contents-wrap {
	display: grid;
	grid-template-columns: 300px auto;
	gap: 20px;
	padding: 20px 0;
}

.contents-aside {
	position: relative
}

.cw-content--group {
	margin-bottom: 25px;
}

.cw-content--group h3 {
	margin: 0;
	padding: 10px 0;
	font-size: 14px;
	line-height: 1em;
	border-bottom: 1px solid rgba(0, 0, 0, .1);
}

.contents-aside--inner {
	position: sticky;
	top: 0;
	bottom: 0;
}

.cw-content--items {
	display: grid;
	grid-template-columns: repeat(auto-fill, minmax(75px, 1fr));
	gap: 5px;
	padding: 10px 0;
}

.cw-content--item {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	text-align: center;
	aspect-ratio: 1 / 1;
	border: 1px solid #dcdcde;
	border-radius: 5px;
	background: #ffffff;
	padding: 10px;
	cursor: pointer;
	font-size: 12px;
	line-height: 1em;
}

.cw-content--item svg {
	display: block;
	width: 16px;
	height: 16px;
	opacity: .5;
	margin-bottom: 10px;
}

.cw-content--item:hover {
	box-shadow: 0 0 10px rgba(0, 0, 0, .05);
	color: #007AFF;
}

.cw-content--item.ui-draggable-dragging {
	width: 50px;
	max-width: 50px;
	box-shadow: 0 0 15px rgba(0, 0, 0, .1);
	border: 2px solid #007AFF;
	color: #007AFF;
}

.cw-content--item.disabled {
	pointer-events: none;
	opacity: .7;
}


.links-list-wrap {
	position: relative;
	display: flex;
	gap: 5px;
	flex-direction: column;
	width: calc(100% - 20px);
	min-height: 50%;
	border: 2px dashed #dcdcde;
	border-radius: 5px;
	padding: 5px;
}

.links-list-wrap.ui-droppable-active {
	border-color: #007AFF;
	border-style: solid;
}


.add-links-wrap {
	display: flex;
	gap: 10px;
	max-width: 95%;
}

.add-links-wrap select,
.add-links-wrap input,
.add-links-wrap button {
	width: 100%;
	max-width: 100%;
}

.add-links-type-wrap {
	flex: 1;
}

.add-links-inputs-wrap {
	flex: 3;
}

.custom-links-action-wrap {
	display: flex;
	flex-flow: row wrap;
	gap: 5px;
}

.custom-links-action-wrap input {
	flex: 1;
}

.linkpage-row {
	position: relative;
	display: flex;
	flex-direction: column;
	gap: 0;
	border: 1px solid #dcdcde;
	border-radius: 5px;
	background: #ffffff;
}

.linkpage-row.ui-sortable-helper {
	cursor: move;
	box-shadow: 0 0 25px rgba(0, 0, 0, .1);
}

.linkpage-row--top,
.linkpage-row--start,
.linkpage-row--end {
	position: relative;
	display: flex;
	align-items: center;
	gap: 5px;
}

.linkpage-row--top {
	position: relative;
	display: flex;
	align-items: center;
	justify-content: space-between;
	flex-flow: row nowrap;
	padding: 5px;
	gap: 25px;
}

.linkpage-row--start {
	position: relative;
	display: flex;
	justify-content: flex-start;
	align-items: center;
	gap: 5px;
}

.linkpage-row--end {
	position: relative;
	display: flex;
	justify-content: flex-end;
	align-items: center;
	gap: 15px;
}

.linkpage-row--drag {
	cursor: move;
}
/* ... */

